<resources>
    <string name="app_name">Clínica AB</string>
    <string name="splashTitulo">Clínica Alberto Bins</string>
    <string name="btnSobreNos">Sobre Nós</string>
    <string name="btnConsultar">Consultar Agendamento</string>
    <string name="btnContato">Contato</string>
    <string name="btnAgendarConsulta">Agendar Consulta</string>
    <string name="tituloTela3">Agendamento de Consulta</string>
    <string name="etNome">Digite seu Nome:</string>
    <string name="tvNome">Nome:</string>
    <string name="tvCpf">CPF:</string>
    <string name="etCpf">Digite seu CPF:</string>
    <string name="tvEmail">E-mail:</string>
    <string name="tvTelefone">Telefone para contato:</string>
    <string name="etEmail">Digite seu email:</string>
    <string name="etTelefone">Digite seu Telefone:</string>
    <string name="etDigiteCpf">Digite seu CPF:</string>
    <string name="tvEspecialidade">Escolha a especialidade da consulta:</string>
    <string name="rbClinicoGeral">Clínico Geral</string>
    <string name="rbOftalmo">Oftalmologista</string>
    <string name="rbDermato">Dermatologista</string>
    <string name="rbOtorrino">Otorrinolaringologista</string>
    <string name="rbGineco">Ginecologista</string>
    <string name="rbUrologista">Urologista</string>
    <string name="tvData">Data da consulta:</string>
    <string name="etData">Digite a data:</string>
    <string name="tvHorario">Horário:</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnAgendar">Agendar</string>
    <string name="tvContato">Entre em contato conosco!</string>
    <string name="mtEndereco">Av. Alberto Bins, 1980 | Centro Histórico - Porto Alegre | RS</string>
    <string name="tvEndereco">Endereço:</string>
    <string name="mtAtendimento">Horários de Atendimento: de segunda a sexta das 9h às 16h.</string>
    <string name="tvEmailContato">E-mail:</string>
    <string name="mtEmail">clinicaalbertobinsmed@outlook.com Tempo de resposta de até 24h.</string>
    <string name="tvTelefoneContato">Telefone:</string>
    <string name="mtTelefoneContato">(51) 3379-77862 para teleconsultas ou (51) 3379-6968 para informações</string>
    <string name="mtTextoSobre1">Fundada em 1988 pelo Doutor Francis Cappola, a Clínica Alberto Bins está a mais de 30 anos prestando um serviço de qualidade para seus clientes.</string>
    <string name="mtTextoSobre2">Tendo sempre a saúde e a segurança como prioridade, nos aperfeiçoamos com o passar do tempo para garantir sua satisfção.</string>
    <string name="mtTextoSobre3">Marque já sua consulta e venha fazer parte da nossa história.</string>
    <string name="tvConsulta">Consultar Agendamentos</string>
    <string name="tvCpfConsulta">Para consultar seu agendamento, informe seu CPF:</string>
    <string name="btnConsulta">Consultar</string>
    <string name="menuHome">Home</string>
    <string name="menuAgendamento">Agendamento</string>
    <string name="menuConsulta">Consultar</string>
    <string name="mtGrupo">"Nosso aplicativo conta com a melhor equipe de desenvolvimento android do pais: Francis Cappola, Luigi Britz e Fellype Rosa."</string>


    <string-array name="spHorario">
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
    </string-array>
</resources>