<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consulta">

    <TextView
        android:id="@+id/tvConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo"
        android:elegantTextHeight="true"
        android:fontFamily="@font/hind_guntur_light"
        android:freezesText="false"
        android:text="@string/tvConsulta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#B7000000"
        android:textIsSelectable="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="515dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvConsulta"
        app:layout_constraintVertical_bias="0.59">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvCpfConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hind_guntur_light"
            android:text="@string/tvCpfConsulta"
            android:textAlignment="center"
            android:textColor="#B7000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="151dp">

            <EditText
                android:id="@+id/etDigiteCpf"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etDigiteCpf"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.009" />

            <Button
                android:id="@+id/btnConsulta"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/btnConsulta"
                android:textAllCaps="false"
                android:textColor="#B7000000"
                android:textSize="17sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.689" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>